Fixed background on mobile view

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
   background: rgb(0,0,0);
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: cover;
+  background-size: contain;
   font-family: "Noto Sans", "Noto Sans CJK TC", "Microsoft JhengHei", "微軟正黑體", sans-serif;
   overflow-x: hidden;
 }
